src/objects/Slack_Payload__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Signature__c</fullName>
        <label>Calculated Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inner_Event__c</fullName>
        <label>Inner Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outer_Event__c</fullName>
        <label>Outer Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Body_Hex__c</fullName>
        <label>Raw Body Hex</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Raw_Body__c</fullName>
        <label>Raw Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_IP__c</fullName>
        <label>Remote IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_URI__c</fullName>
        <label>Request URI</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signed_Request_Verification_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Request Verification Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Request_Verification_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Request Verification Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Failure__c</fullName>
        <label>Verification Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Slack Payload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Outer_Event__c</columns>
        <columns>Inner_Event__c</columns>
        <columns>Subtype__c</columns>
        <columns>Body__c</columns>
        <columns>Headers__c</columns>
        <columns>HTTP_Method__c</columns>
        <columns>Path__c</columns>
        <columns>Params__c</columns>
        <columns>Remote_IP__c</columns>
        <columns>Request_URI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Slack Payload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Payloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>